--- a/awards/templates/base.html
+++ b/awards/templates/base.html
@@ -1,5 +1,6 @@
 {% load bootstrap3 %}
-{% load static%}
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 
@@ -14,7 +15,7 @@
 
   {% block styles %}
   {% bootstrap_css %}
-  <link rel="stylesheet" href="{% static 'css/main.css' %}">
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   {% endblock %}
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
