--- a/awards/templates/navbar.html
+++ b/awards/templates/navbar.html
@@ -42,19 +42,19 @@
                 </div>
             </div>
             <div class="col-md-1" style="padding-top:10px;">
-                <form class="form-inline my-2 my-lg-0" role="search" action="{% url 'search_results' %}">
+                <form class="form-inline my-2 my-lg-0" role="search" action="{% url 'search' %}">
                     <input type="text" class="form-control my-2 my-sm-0 search-input" name="search" placeholder="Search.." id="search">
                 </form>
             </div>
             <div class="col-md-8" style=" padding-top:5px;text-align:center;font-family: 'Comfortaa', cursive; letter-spacing:2px;">
                 <div class="row">
                     <div class="col-md-10">
-                        <a class="navbar-brand navbar-right" href="{% url 'index' %}" style="font-size:30px; color:black; "><strong>awwwards.</strong></a>
+                        <a class="navbar-brand navbar-right" href="{% url 'index' %}" style="font-size:30px; color:black; "><strong>Awards</strong></a>
                     </div>
                     <div class="col-md-2" style="padding-top:10px;">
                         <div class="row">
                             <div class="col-md-6" style="padding-top:5px;">
-                                <a href="{%url 'profile' user_id%}" style="font-size:13px; color:black; text-decoration: none;">{{ user.username }}</a>
+                                <a href="{%url 'profile'%}" style="font-size:13px; color:black; text-decoration: none;">{{ user.username }}</a>
                             </div>
                             <div class="col-md-6">
                                 {% if user.is_authenticated %}
@@ -63,7 +63,7 @@
                                         aria-haspopup="true" aria-expanded="false"><span style="cursor:pointer">&#9776;</span>
                                     </a>
                                     <div class="dropdown-menu" style="width:300px;">
-                                        <a class="dropdown-item" href="{%url 'profile' user_id%}">Profile</a>
+                                        <a class="dropdown-item" href="{%url 'profile'%}">Profile</a>
                                         <div class="dropdown-divider"></div>
                                         <a class="dropdown-item" href="#">Activity</a>
                                         <div class="dropdown-divider"></div>
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="col-md-2" style="padding-top:15px; background-color: #49c5b6; text-align:center">
-                <a href="{%url 'new-post'%}" style="color:white; font-size:14px; text-decoration: none; ">SUBMIT YOUR
+                <a href="{%url 'new_post'%}" style="color:white; font-size:14px; text-decoration: none; ">SUBMIT YOUR
                     SITE!
                 </a>
             </div>
