--- a/awards/templates/new_post.html
+++ b/awards/templates/new_post.html
@@ -17,7 +17,7 @@
 
 <body>
   <div class="container" style="padding-top:30px;">
-    <form action="{%url 'new-post'%}" method="post" enctype="multipart/form-data">
+    <form action="{%url 'new_post'%}" method="post" enctype="multipart/form-data">
       {%csrf_token%}
 
       {% bootstrap_form form%}
