--- a/awards/templates/updateprofile.html
+++ b/awards/templates/updateprofile.html
@@ -1,5 +1,6 @@
-{% extends 'base.html' %}
-{% load staticfiles %}
+{% load bootstrap3 %}
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 
@@ -7,15 +8,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>New Profile</title>
+    <title>Edit Profile</title>
     {{form.media}}
 
     {% block styles %}
     {% bootstrap_css %}
+    
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/main.css' %}"> {% endblock %}
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">{% endblock %}
     <link href="https://fonts.googleapis.com/css?family=K2D" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cookie|Poiret+One" rel="stylesheet">
 </head>
@@ -31,7 +33,7 @@
 
         {% block scripts %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        {% bootstrap_javascript %} 
+        {% bootstrap_javascript %}
         {% endblock %}
     </div>
     <style>
