--- a/awards/templates/base.html
+++ b/awards/templates/base.html
@@ -8,9 +8,9 @@
   <meta charset="utf-8">
   <link rel="icon" href="#">
   {% if title %}
-  <title>Awwards - {{title}}</title>
+  <title>Awards - {{title}}</title>
   {% else %}
-  <title>Awwards </title>
+  <title>Awards </title>
   {% endif %}
 
   {% block styles %}
