--- a/awards/templates/footer.html
+++ b/awards/templates/footer.html
@@ -1,1 +1,20 @@
-<p>Footer</p>
+<!DOCTYPE html>
+<html>
+<body>
+    <div class="container-fluid" style="background-color:white; font-family: 'Raleway', sans-serif; position:unset;bottom: 0px;">
+        <div class="container" style="background-color:white;">
+            <div class="row" >
+                <div class="col-md-12">
+                    <h4 style="color: aqua; float: left;">The Awards site</h5>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12" style="padding-top:30px;">
+                    <h5> &COPY; <strong>Monica Oyugi</strong></h6>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
